Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/Quiz_Attendee__c.object-meta.xml
<CustomObject>
    <label>Quiz Attendee</label>
    <nameField>
        <displayFormat>ATT-{00000}</displayFormat>
        <label>Quiz Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>