Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/Attendee_Name_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name_Mobile__c</fullName>
    <formula>Quiz_Attendee__r.FirstName 
+&apos; &apos;+ Quiz_Attendee__r.LastName +&apos; &apos;+ Quiz_Attendee__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name &amp; Mobile</label>
    <type>Text</type>
</CustomField>