Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/Attendee_state__c.field-meta.xml
<CustomField>
    <fullName>Attendee_state__c</fullName>
    <description>Quiz Attendee State</description>
    <formula>Quiz_Attendee__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee state</label>
    <type>Text</type>
</CustomField>