Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/Correct_answers__c.field-meta.xml
<CustomField>
    <fullName>Correct_answers__c</fullName>
    <label>Correct answers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>