Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/CorrectAnswerCollect__c.field-meta.xml
<CustomField>
    <fullName>CorrectAnswerCollect__c</fullName>
    <label>CorrectAnswerCollect</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>