Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/Quiz_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quiz_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>