Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/Quiz_Catagory__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Catagory__c</fullName>
    <label>Quiz Catagory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture Junior</fullName>
            </value>
            <value>
                <fullName>Agriculture Senior</fullName>
            </value>
            <value>
                <fullName>Plumbing Junior</fullName>
            </value>
            <value>
                <fullName>Plumbing Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>