Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/Quiz_status__c.field-meta.xml
<CustomField>
    <fullName>Quiz_status__c</fullName>
    <label>Quiz status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>