Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/fields/Time_of_submission__c.field-meta.xml
<CustomField>
    <fullName>Time_of_submission__c</fullName>
    <label>Time of submission</label>
    <type>DateTime</type>
</CustomField>