Partial_14Dec2021/force-app/main/default/objects/Quiz_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee_Name_Mobile__c</columns>
    <columns>Percentage__c</columns>
    <columns>Quiz_Attendee__c</columns>
    <columns>Quiz_Catagory__c</columns>
    <columns>Quiz_Month__c</columns>
    <columns>Time_of_submission__c</columns>
    <columns>CorrectAnswerCollect__c</columns>
    <columns>Correct_answers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quiz_Month__c</field>
        <operation>equals</operation>
        <value>December - 2017</value>
    </filters>
    <label>All</label>
</ListView>